[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/hud/hud_select_list_2_item.png" type="Texture" id=1]
[ext_resource path="res://Entities/HUD/Selection_List.gd" type="Script" id=2]
[ext_resource path="res://Sprites/hud/hud_select_list_5_item.png" type="Texture" id=3]
[ext_resource path="res://Sprites/hud/hud_select_list_3_item.png" type="Texture" id=4]
[ext_resource path="res://Sprites/hud/hud_select_list_4_item.png" type="Texture" id=5]
[ext_resource path="res://Sprites/hud/hud_select_list_1_item.png" type="Texture" id=6]
[ext_resource path="res://Entities/HUD/Assets/Menu_Confirmation_Sound.wav" type="AudioStream" id=7]

[node name="Selection_List" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="List_1_Item_Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 6 )
centered = false

[node name="List_2_Item_Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
centered = false

[node name="List_3_Item_Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
centered = false

[node name="List_4_Item_Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )
centered = false

[node name="List_5_Item_Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
centered = false

[node name="Confirm_Selection_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
